Fix paragraph overflow

--- a/styles/section.css
+++ b/styles/section.css
@@ -30,7 +30,7 @@ section {
 .section-paragraph {
     color: #eae6e6;
     font-family: 'Open Sans', sans-serif;
-    min-width: 400px;;
+    min-width: 300px;
 }
 
 .image-container {
